added simple add book api, migration files, seed file

--- a/books-list-api/appsettings.json
+++ b/books-list-api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=DESKTOP-IG7CPTE\\SQLEXPRESS;Initial Catalog=my-books-data;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
+  }
+  
+
 }
