--- a/books-list-api/Properties/launchSettings.json
+++ b/books-list-api/Properties/launchSettings.json
@@ -32,7 +32,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "api/publisher/get-all-publisher",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
