--- a/books-list-api/appsettings.json
+++ b/books-list-api/appsettings.json
@@ -1,14 +1,36 @@
 {
-  "Logging": {
-    "LogLevel": {
+  //"Logging": {
+  //  "LogLevel": {
+  //    "Default": "Information",
+  //    "Microsoft.AspNetCore": "Warning"
+  //  }
+  //},
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }
+      //{
+      //  "Name": "File",
+      //  "Args": {
+      //    "path": "Logs/log-.txt",
+      //    "rollingInterval": "Day"
+      //  }
+      //}
+    ]
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnectionString": "Data Source=DESKTOP-IG7CPTE\\SQLEXPRESS;Initial Catalog=my-books-data;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
   }
-  
+
 
 }
