--- a/books-list-api/appsettings.json
+++ b/books-list-api/appsettings.json
@@ -1,36 +1,31 @@
 {
-  //"Logging": {
-  //  "LogLevel": {
-  //    "Default": "Information",
-  //    "Microsoft.AspNetCore": "Warning"
-  //  }
-  //},
   "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
       "Default": "Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
-      }
+        "Override": {
+          "Microsoft": "Warning",
+          "System": "Warning"
+        }
     },
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
     "WriteTo": [
       {
         "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz}] [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
       }
-      //{
-      //  "Name": "File",
-      //  "Args": {
-      //    "path": "Logs/log-.txt",
-      //    "rollingInterval": "Day"
-      //  }
-      //}
-    ]
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnectionString": "Data Source=DESKTOP-IG7CPTE\\SQLEXPRESS;Initial Catalog=my-books-data;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
   }
-
 
 }
