Stored logs inside sql server database table

--- a/books-list-api/appsettings.json
+++ b/books-list-api/appsettings.json
@@ -19,6 +19,16 @@
           "rollingInterval": "Day",
           "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz}] [{Level:u3}] {Message:lj}{NewLine}{Exception}"
         }
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "DefaultConnectionString",
+          "sinkOptions": {
+            "tableName": "Logs",
+            "autoCreateSqlTable": true
+          }
+        }
       }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
